--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
                     Pixi.js version :
                     <select id="version">
                         <option value="" data-version="">
-                            Default (local)
+                            Latest (local, 'bin' folder)
                         </option>
-                        <option value="https://rawgit.com/pixijs/pixi.js/dev/bin/pixi.js" data-version="dev">
-                            Latest dev v4
+                        <option value="dev" data-version="dev">
+                            Development (local, 'dev' folder)
                         </option>
-                        <option value="https://rawgit.com/pixijs/pixi.js/dev-experimental-geometry/bin/pixi.js" data-version="dev-experimental-geometry">
-                            Latest dev experimental
+                        <option value="https://rawgit.com/gameofbombs/pixi.js/master/bin/pixi.js">
+                            Latest (github)
                         </option>
                     </select>
                     <span><a id='download' href="#">Download the example code</a></span>
